# openorbitaloptimizer-pyscf

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: _core.cpp
src/openorbitaloptimizer/: __init__.py  pyscf.py
tests/: _molecules.py  _retry.py  conftest.py  test_addon.py  test_benchmark.py  test_challenging.py  test_large.py  test_simple.py  test_skala.py
