[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "openorbitaloptimizer-pyscf"
version = "0.2.1"
description = "Python bindings for OpenOrbitalOptimizer SCF library"
readme = "README.md"
license.file = "LICENSE"
urls.repository = "https://github.com/awvwgk/openorbitaloptimizer-pyscf"

requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]
optional-dependencies.pyscf = ["pyscf>=2.4"]
optional-dependencies.test = ["pytest", "pyscf>=2.4", "skala"]

[tool.scikit-build]
wheel.packages = ["src/openorbitaloptimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
